--- a/arch/arm64/boot/dts/freescale/fsl-ls2088a-rdb.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls2088a-rdb.dts
@@ -25,19 +25,20 @@
 	sfp_mac1: sfp-mac1 {
 		compatible = "sff,sfp";
 		i2c-bus = <&sfp_bus_0>;
+		maximum-power-milliwatt = <2000>;
 	};
-	sfp_mac2: sfp-mac2 {
-		compatible = "sff,sfp";
-		i2c-bus = <&sfp_bus_1>;
-	};
-	sfp_mac3: sfp-mac3 {
-		compatible = "sff,sfp";
-		i2c-bus = <&sfp_bus_2>;
-	};
-	sfp_mac4: sfp-mac4 {
-		compatible = "sff,sfp";
-		i2c-bus = <&sfp_bus_3>;
-	};
+	/*sfp_mac2: sfp-mac2 {*/
+		/*compatible = "sff,sfp";*/
+		/*i2c-bus = <&sfp_bus_1>;*/
+	/*};*/
+	/*sfp_mac3: sfp-mac3 {*/
+		/*compatible = "sff,sfp";*/
+		/*i2c-bus = <&sfp_bus_2>;*/
+	/*};*/
+	/*sfp_mac4: sfp-mac4 {*/
+		/*compatible = "sff,sfp";*/
+		/*i2c-bus = <&sfp_bus_3>;*/
+	/*};*/
 };
 
 &dpmac1 {
@@ -85,19 +86,19 @@
 		compatible = "ethernet-phy-id13e5.1002";
 		reg = <0x11>;
 		phy-connection-type = "10gbase-kr";
-		sfp = <&sfp_mac2>;
+		/*sfp = <&sfp_mac2>;*/
 	};
 	mdio1_phy3: emdio1_phy@3 {
 		compatible = "ethernet-phy-id13e5.1002";
 		reg = <0x12>;
 		phy-connection-type = "10gbase-kr";
-		sfp = <&sfp_mac3>;
+		/*sfp = <&sfp_mac3>;*/
 	};
 	mdio1_phy4: emdio1_phy@4 {
 		compatible = "ethernet-phy-id13e5.1002";
 		reg = <0x13>;
 		phy-connection-type = "10gbase-kr";
-		sfp = <&sfp_mac4>;
+		/*sfp = <&sfp_mac4>;*/
 	};
 };
 
