--- a/arch/arm64/boot/dts/freescale/fsl-ls208xa.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-ls208xa.dtsi
@@ -604,13 +604,15 @@
 
 		i2c2: i2c@2020000 {
 			status = "disabled";
-			compatible = "fsl,vf610-i2c";
+			compatible = "fsl,vf610-i2c", "fsl,ls208xa-vf610-i2c";
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <0x0 0x2020000 0x0 0x10000>;
 			interrupts = <0 35 0x4>; /* Level high type */
 			clock-names = "i2c";
 			clocks = <&clockgen 4 3>;
+			/*scl-gpios = <&gpio3 0 0>;*/
+			/*sca-gpios = <&gpio3 1 0>;*/
 		};
 
 		i2c3: i2c@2030000 {
